# bubblegum-cpi

./: .gitattributes  Anchor.toml  README.md  deploy.sh  package.json
configs/: validator.cjs
keypairs/: creator.json  deploy-key-bubblegum-cpi.json  fee-payer.json  leaf-owner.json
programs/bubblegum-cpi/: Cargo.toml
programs/bubblegum-cpi/src/: error.rs  lib.rs  utils.rs
programs/bubblegum-cpi/src/instructions/: create_collection_nft.rs  create_tree.rs  mint_cnft_to_collection.rs  mod.rs
tests/: bubblegum-cpi.ts
tests/utils/: index.ts  types.ts
