[package]
name = "bubblegum-cpi"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bubblegum_cpi"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = {version="0.29.0", features = ["metadata"]}
mpl-bubblegum = "1.2.0"
spl-account-compression = {version = "0.3.0", features = ["cpi"]}
url = "2.5.0"
